--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="association">
                         <form action="" class="search">
-                            <input type="text" class="search__input">
+                            <input type="text" placeholder="Search here" class="search__input">
                             <div class="search__select-wrap">
                                 <select name="" id="" class="search__select">
                                     <option value="">Categories</option>
@@ -53,15 +53,15 @@
                             </a>
                         </form>
                         <div class="profile__menu">
-                            <div class="basket">
-
-                            </div>
-                            <div class="notif">
-
-                            </div>
-                            <div class="profile">
-
-                            </div>
+                            <a href="https:\\google.com" class="menu__item">
+                                <img src="img/Shop.svg" alt="">
+                            </a>
+                            <a href="" class="menu__item">
+                                <img src="img/Notification.svg" alt="">
+                            </a>
+                            <a href="" class="menu__item">
+                                <img src="img/avatar 1.svg" alt="">
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -99,14 +99,109 @@
                         </ul>
                     </nav>
                     <div class="header__content">
-                    <div class="header__baner">
-                        <img src="img/Hero baner.png" alt="" class="baner__img">
+                        <div class="header__baner">
+                            <div class="header__baner-text">
+                                <div class="header__baner-collection">
+                                    TOP COLLECTIONS 2022
+                                </div>
+                                <div class="header__baner__title">
+                                    We Serve Your Dream <span class="title-span">Furniture</span>
+                                </div>
+                                <div class="header__baner-discount">
+                                    Get 50% off all products
+                                </div>
+                                <div class="header__baner-button">
+                                    SHOP NOW
+                                </div>
+                            </div>
+                            <div class="header__baner-preview">
+                                <img src="img/Furniture 1.svg" width="374px" alt="">
+                            </div>
+                            <div class="similar-products-list">
+                                <div class="similar__item">
+                                    <div class="similar__img">
+                                        <img src="img/Frame.svg" alt="">
+                                    </div>
+                                    <div class="similar__price">$120</div>
+                                    <div class="similar__description">Office Desk Chair</div>
+                                </div>
+                                <div class="similar__item">
+                                    <div class="similar__img">
+                                        <img src="img/Rectangle.png" alt="">
+                                    </div>
+                                    <div class="similar__price">$180</div>
+                                    <div class="similar__description">Home Alisa Sofa</div>
+                                </div>
+                                <div class="similar__item">
+                                    <div class="similar__img">
+                                        <img src="img/Rectangle123.png" alt="">
+                                    </div>
+                                    <div class="similar__price">$250</div>
+                                    <div class="similar__description">Modern Chair</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <main class="main">
+                <div class="container">
+                    <div class="feature">
+                        <div class="feature__item">
+                            <div class="feature__img">
+                                <img src="img/Shipping.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="feature__item">
+                            <div class="feature__img">
+                                <img src="img/Gift card.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="feature__item">
+                            <div class="feature__img">
+                                <img src="img/koshelek.svg" alt="">
+                            </div>
+                        </div>
+                        <div class="feature__item">
+                            <div class="feature__img">
+                                <img src="img/Payment.svg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="offer__list">
+                        <div class="offer__item offer__item--big">
+                            <div class="offer__title">
+                                Modern Furniture Collections
+                            </div>
+                            <div class="offer__price">
+
+                            </div>
+                            <div class="details">Read more</div>
+                        </div>
+                        <div class="offer__small-list">
+                            <div class="offer__item offer__item item-top">
+                                <div class="offer__title">
+                                    Modern Furniture Collections
+                                </div>
+                                <div class="offer__price">
+
+                                </div>
+                                <div class="details">Read more</div>
+                            </div>
+                            <div class="offer__item offer__item item-bottom">
+                                <div class="offer__title">
+                                    Modern Furniture Collections
+                                </div>
+                                <div class="offer__price">
+
+                                </div>
+                                <div class="details">Read more</div>
+                            </div>
+                        </div>
                     </div>
                 </div>
-                </div>
-                
-            </div>
-            
+            </main>
         </div>
     </div>
 </body>
