--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
             <div class="header__main">
                 <nav class="row__nav">
                     <div class="container row__nav-container">
-                        <div class="row__nav-all">
-
-                            ALL COLLECTIONS
+                        <div class="nav__aside-icon">
+                            <div class="nav__aside-burger">
+                                <span class="nav__aside-burger-el"></span>
+                            </div>
+                            <span class="nav__aside-title">ALL COLLECTIONS</span>
                         </div>
                         <ul class="row__nav-list">
                             <li class="row__nav-item">HOME</li>
@@ -116,7 +118,10 @@
                             </div>
                             <div class="header__baner-preview">
                                 <img src="img/Furniture 1.svg" width="374px" alt="">
+                                <div class="circle-list"><span class="circle"></span><span class="circle"></span> <span
+                                        class="circle-active"></span> <span class="circle"></span></div>
                             </div>
+
                             <div class="similar-products-list">
                                 <div class="similar__item">
                                     <div class="similar__img">
@@ -171,39 +176,177 @@
                     </div>
                     <div class="offer__list">
                         <div class="offer__item offer__item--big">
-                            <div class="offer__title">
-                                Modern Furniture Collections
-                            </div>
-                            <div class="offer__price">
-
-                            </div>
-                            <div class="details">Read more</div>
+                            <div class="offer__description">
+                                <div class="offer__title">
+                                    Modern Furniture Collections
+                                </div>
+                                <div class="offer__price">
+                                    Starting from <span class="offer__price-span">500$</span>
+                                </div>
+                                <div class="offer__details">Read more</div>
+                            </div class="offer__description">
                         </div>
                         <div class="offer__small-list">
-                            <div class="offer__item offer__item item-top">
-                                <div class="offer__title">
-                                    Modern Furniture Collections
-                                </div>
-                                <div class="offer__price">
-
-                                </div>
-                                <div class="details">Read more</div>
+                            <div class="offer__item item-top">
+                                <divc class="offer__description">
+                                    <div class="offer__title">
+                                        Modern Furniture Collections
+                                    </div>
+                                    <div class="offer__price">
+                                        Up to 20% discount
+                                    </div>
+                                    <div class="offer__details">Read more</div>
+                                </divc>
                             </div>
-                            <div class="offer__item offer__item item-bottom">
-                                <div class="offer__title">
-                                    Modern Furniture Collections
+                            <div class="offer__item item-bottom">
+                                <div class="offer__description">
+                                    <div class="offer__title">
+                                        Modern Furniture Collections
+                                    </div>
+                                    <div class="offer__price">
+                                        Sale upto 40% discount
+                                    </div>
+                                    <div class="offer__details">Read more</div>
                                 </div>
-                                <div class="offer__price">
-
-                                </div>
-                                <div class="details">Read more</div>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <!-- <div class="ssuper"><img src="img/Trending.svg" alt="" align="center" class="trending"></div> -->
+                <!-- -->
+                <div class="trending">
+                    <div class="container">
+                        <div class="title">TRENDING</div>
+                        <div class="trending__category">
+                            <div class="category__item selected">Top Products</div>
+                            <div class="category__item">New Arrivals</div>
+                            <div class="category__item">Best Sellers</div>
+                        </div>
+                        <ul class="trending__list">
+                            <div class="trending-first-row">
+                                <li class="trending__item">
+                                    <img src="img/styl1.svg" alt="" class="trending__preview">
+                                    <div class="trending__item-description">
+                                        <div class="trending__item-type">
+                                            CHAIR
+                                        </div>
+                                        <div class="trending__item-name">
+                                            Minimal LCD chair
+                                        </div>
+                                        <div class="prices">
+                                            <div class="trending__item-price">$180</div>
+                                            <div class="trending__item-old-price">$250</div>
+                                        </div>
+                                        <div class="trending__rating">
+                                            <div class="star"><img src="img/star.png" alt=""></div>
+                                            <div class="star"><img src="img/star.png" alt=""></div>
+                                            <div class="star"><img src="img/star.png" alt=""></div>
+                                            <div class="star"><img src="img/star.png" alt=""></div>
+                                            <div class="star"><img src="img/star.png" alt=""></div>
+                                        </div>
+                                    </div>
+                                </li>
+                                <li class="trending__item">
+                                    <img src="img/styl1.svg" alt="" class="trending__preview">
+                                    <div class="trending__item-type">
+                                        CHAIR
+                                    </div>
+                                    <div class="trending__item-name">
+                                        Minimal LCD chair
+                                    </div>
+                                    <div class="prices">
+                                        <div class="trending__item-price"></div>
+                                        <div class="trending__item-old-price"></div>
+                                    </div>
+                                </li>
+                                <li class="trending__item">
+                                    <img src="img/styl1.svg" alt="" class="trending__preview">
+                                    <div class="trending__item-type">
+                                        CHAIR
+                                    </div>
+                                    <div class="trending__item-name">
+                                        Minimal LCD chair
+                                    </div>
+                                    <div class="prices">
+                                        <div class="trending__item-price"></div>
+                                        <div class="trending__item-old-price"></div>
+                                    </div>
+                                </li>
+                                <li class="trending__item">
+                                    <img src="img/styl1.svg" alt="" class="trending__preview">
+                                    <div class="trending__item-type">
+                                        CHAIR
+                                    </div>
+                                    <div class="trending__item-name">
+                                        Minimal LCD chair
+                                    </div>
+                                    <div class="prices">
+                                        <div class="trending__item-price"></div>
+                                        <div class="trending__item-old-price"></div>
+                                    </div>
+                                </li>
+                            </div>
+                            <div class="trending-two-row">
+                                <li class="trending__item">
+                                    <img src="img/styl1.svg" alt="" class="trending__preview">
+                                    <div class="trending__item-type">
+                                        CHAIR
+                                    </div>
+                                    <div class="trending__item-name">
+                                        Minimal LCD chair
+                                    </div>
+                                    <div class="prices">
+                                        <div class="trending__item-price"></div>
+                                        <div class="trending__item-old-price"></div>
+                                    </div>
+                                </li>
+                                <li class="trending__item">
+                                    <img src="img/styl1.svg" alt="" class="trending__preview">
+                                    <div class="trending__item-type">
+                                        CHAIR
+                                    </div>
+                                    <div class="trending__item-name">
+                                        Minimal LCD chair
+                                    </div>
+                                    <div class="prices">
+                                        <div class="trending__item-price"></div>
+                                        <div class="trending__item-old-price"></div>
+                                    </div>
+                                </li>
+                                <li class="trending__item">
+                                    <img src="img/styl1.svg" alt="" class="trending__preview">
+                                    <div class="trending__item-type">
+                                        CHAIR
+                                    </div>
+                                    <div class="trending__item-name">
+                                        Minimal LCD chair
+                                    </div>
+                                    <div class="prices">
+                                        <div class="trending__item-price"></div>
+                                        <div class="trending__item-old-price"></div>
+                                    </div>
+                                </li>
+                                <li class="trending__item">
+                                    <img src="img/styl1.svg" alt="" class="trending__preview">
+                                    <div class="trending__item-type">
+                                        CHAIR
+                                    </div>
+                                    <div class="trending__item-name">
+                                        Minimal LCD chair
+                                    </div>
+                                    <div class="prices">
+                                        <div class="trending__item-price"></div>
+                                        <div class="trending__item-old-price"></div>
+                                    </div>
+                                </li>
+                            </div>
+                        </ul>
                     </div>
                 </div>
             </main>
         </div>
     </div>
+    <script src="/script.js"></script>
 </body>
 
 </html>
